<resources>
    <string name="app_name">YesOrNo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">YES or NO</string>
    <string name="empty"></string>
    
    <!--for login.xml-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!--for question.xml-->
    <string name="question_hint">enter your qeustion</string>
    <string name="receiver">Select receiver</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="title_activity_questions">Question</string>
    <string name="title_activity_question">Question</string>

    <!--for exit dialog-->
    <string name="exit">Exit?</string>
    <string name="exit_message">Do you want exit?</string>
    <string name="exit_cancel">Log out is canceled.</string>
</resources>
