<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.androidtown.brian.yesorno.Questions">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>
                <EditText
                    android:id="@+id/questionEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_hint"
                    />

                <View
                    android:layout_height="10dp"
                    android:background="#0000ff"
                    />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/receiverBtn"
                    android:text="@string/receiver"
                    />
                <View
                    android:layout_height="10dp"
                    android:background="#0000ff"
                    />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/sendBtn"
                    android:text="@string/send"
                    />

                <Button
                    android:id="@+id/logoutBtn"
                    android:text="@string/logout"
                    />

                <View
                    android:layout_height="10dp"
                    android:background="#0000ff"
                    />
            </TableRow>

        </TableLayout>

</RelativeLayout>
